2016-03-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (statusbar): Don't bother putting back the cursor in
	the edit window, as it is off anyway, and will be placed back in the
	main loop.  This prevents a segfault when trying to open a directory.
	* src/search.c (findnextstr): Provide feedback when searching takes
	longer than roughly half a second (on average).

2016-03-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (findnextstr): Prevent the internal spell checker from
	finding the first occurrence twice.  And delete the piece of dead code
	that was meant to do this.  This fixes Savannah bug #47188.
	* src/search.c (findnextstr): Clean up and rename a variable.
	* src/search.c (findnextstr): Poll the keyboard once per second.
	* src/winio.c (reset_cursor): Remove a pointless condition, and make
	use of an existing intermediary variable.
	* src/winio.c (reset_cursor): Tidy up and rename a variable.
	* src/winio.c (onekey): Elide an unneeded 'if' and unneeded variable.

2016-03-22  Thomas Rosenau  <thomasr@fantasymail.de>
	* configure.ac, src/*.c: Check for the existence of the REG_ENHANCED
	regex flag, and use it when it's available (on OS X systems).  This
	completes the fix for Savannah bug #47325.

2016-03-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (findnextfile): Trim a duplicate variable.
	* src/browser.c (browser_refresh, findnextfile): Rename four vars.

2016-03-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_writeout), src/nano.c (do_exit): Normalize the
	punctuation in some prompts: no space before a question mark, and
	a semicolon instead of a comma between phrases.
	* src/text.c (do_cutword): Don't put cut words into the cutbuffer --
	that is: treat the deletion of words like pressing Backspace/Delete.
	* src/search.c (get_history_completion, find_history): Cycle through
	the items from newest to oldest.  This fixes Savannah bug #47205.